FullQa New/src/objects/SmartTask__c.object
<CustomObject>
    <fields>
        <fullName>More_Specifc__c</fullName>
        <label>More Specific</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>HowKeepYou__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>Company Acquired</fullName>
                </value>
                <value>
                    <fullName>Company Out of Business</fullName>
                </value>
                <value>
                    <fullName>More Accurate</fullName>
                </value>
                <value>
                    <fullName>Faster</fullName>
                </value>
                <value>
                    <fullName>More Reliable</fullName>
                </value>
                <value>
                    <fullName>More Responsive</fullName>
                </value>
                <value>
                    <fullName>Less Expensive</fullName>
                </value>
                <value>
                    <fullName>Enhance the Product</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Better Filing/Funding Process</fullName>
                </value>
                <value>
                    <fullName>More Accurate Returns</fullName>
                </value>
                <value>
                    <fullName>More Timely Returns</fullName>
                </value>
                <value>
                    <fullName>Better Notice Management Process</fullName>
                </value>
                <value>
                    <fullName>More Effective Notice Resolution</fullName>
                </value>
                <value>
                    <fullName>Cancelled for Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Cancelled for Breach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoticeEMailHeader__c</fullName>
        <label>NoticeEMailHeader</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Received__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Notice Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfBillsPaid__c</fullName>
        <description>The number of bills a client pays annually, or 1.5 times the Number of Returns estimate</description>
        <inlineHelpText>The number of bills a client pays annually, or 1.5 times the Number of Returns estimate</inlineHelpText>
        <label>Number Of Bills Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReturns__c</fullName>
        <description>The number of returns a client typically files annually.</description>
        <inlineHelpText>The number of returns a client typically files annually.</inlineHelpText>
        <label>Estimated Number Of Returns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfStates__c</fullName>
        <inlineHelpText>If the client doesn’t know exactly how many returns they will have, please fill this out.</inlineHelpText>
        <label>NumberOfStates</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Locations__c</fullName>
        <inlineHelpText>If the client doesn’t know exactly how many returns they will have, please fill this out.  Unique locations could be unique address, lessee addresses, stores, office spaces, etc.</inlineHelpText>
        <label>Number of Unique Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherAssistanceNotes__c</fullName>
        <description>Notes related to miscellaneous additional services requested by the client</description>
        <inlineHelpText>Notes related to miscellaneous additional services requested by the client</inlineHelpText>
        <label>Other Assistance Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherIndustryDesc__c</fullName>
        <description>A description of the &apos;Other&apos; industry a client is a participant in</description>
        <inlineHelpText>A description of the &apos;Other&apos; industry a client is a participant in</inlineHelpText>
        <label>Other Industry Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>Campaign.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SmartTasks (Owner)</relationshipLabel>
        <relationshipName>SmartTasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPRPerReturnFee__c</fullName>
        <description>The Per Return Fee for Prior Period Returns</description>
        <inlineHelpText>The Per Return Fee for Prior Period Returns</inlineHelpText>
        <label>PPR Per Return Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPTChallenges__c</fullName>
        <label>PPT Challenges</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPTServiceStartDate__c</fullName>
        <description>Desired PPT Service Start Date.
Please start on the quarter, otherwise contact David Macke at 919-800-2533</description>
        <inlineHelpText>Desired PPT Service Start Date.
Please start on the quarter, otherwise contact David Macke at 919-800-2533</inlineHelpText>
        <label>PPT Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPTServiceTerminationDate__c</fullName>
        <description>Desired PPT Service Termination Date</description>
        <inlineHelpText>Desired PPT Service Termination Date</inlineHelpText>
        <label>PPT Service Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSALegalContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PSA Legal Contact</description>
        <inlineHelpText>The PSA Legal Contact</inlineHelpText>
        <label>PSA Legal Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SmartTasks (PSA Legal Contact)</relationshipLabel>
        <relationshipName>PPT_SOW_PSA_Legal_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSATechnicalContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PSA Technical Contact</description>
        <inlineHelpText>The PSA Technical Contact</inlineHelpText>
        <label>PSA Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SmartTasks (PSA Technical Contact)</relationshipLabel>
        <relationshipName>PPT_SOW_PSA_Technical_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Info Request</fullName>
                </value>
                <value>
                    <fullName>Non Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pct_Change__c</fullName>
        <formula>IF(OR(ISNULL(ValueNow__c),ValueNow__c=0),0, ROUND(Billing_Change_Proposed__c /ValueNow__c,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pending__c</fullName>
        <label>Pending</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointOfContact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designated Points of Contact [For personal property filings, signatures, etc.] - Contact 1</description>
        <inlineHelpText>Designated Points of Contact [For personal property filings, signatures, etc.] - Contact 1</inlineHelpText>
        <label>Primary Point Of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SmartTasks (Point Of Contact 1)</relationshipLabel>
        <relationshipName>PPT_SOW_POC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PointOfContact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designated Points of Contact [For personal property filings, signatures, etc.] - Contact 2</description>
        <inlineHelpText>Designated Points of Contact [For personal property filings, signatures, etc.] - Contact 2</inlineHelpText>
        <label>Secondary Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SmartTasks (Point of Contact 2)</relationshipLabel>
        <relationshipName>PPT_SOW_POC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PointOfContact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designated Points of Contact [For personal property filings, signatures, etc.] - Contact 3</description>
        <inlineHelpText>Designated Points of Contact [For personal property filings, signatures, etc.] - Contact 3</inlineHelpText>
        <label>Asset Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SmartTasks (Point of Contact 3)</relationshipLabel>
        <relationshipName>PPT_SOW_POC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Instructions__c</fullName>
        <label>Pricing Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductTags__c</fullName>
        <label>Product Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abas- US</fullName>
                </value>
                <value>
                    <fullName>Accumatica</fullName>
                </value>
                <value>
                    <fullName>Action Verb</fullName>
                </value>
                <value>
                    <fullName>Aftersoft Network</fullName>
                </value>
                <value>
                    <fullName>Americaneagle.com</fullName>
                </value>
                <value>
                    <fullName>Americommerce</fullName>
                </value>
                <value>
                    <fullName>Applied Technology Group</fullName>
                </value>
                <value>
                    <fullName>Argentis</fullName>
                </value>
                <value>
                    <fullName>Ascent</fullName>
                </value>
                <value>
                    <fullName>Azox</fullName>
                </value>
                <value>
                    <fullName>BigMachines</fullName>
                </value>
                <value>
                    <fullName>Binary Stream</fullName>
                </value>
                <value>
                    <fullName>Bird Dog</fullName>
                </value>
                <value>
                    <fullName>Bonafide</fullName>
                </value>
                <value>
                    <fullName>BO Technology</fullName>
                </value>
                <value>
                    <fullName>Business System Integrators</fullName>
                </value>
                <value>
                    <fullName>BV Software</fullName>
                </value>
                <value>
                    <fullName>Celerant</fullName>
                </value>
                <value>
                    <fullName>Colinear</fullName>
                </value>
                <value>
                    <fullName>Commerce V3</fullName>
                </value>
                <value>
                    <fullName>Cube Six, Inc.</fullName>
                </value>
                <value>
                    <fullName>Cyrious</fullName>
                </value>
                <value>
                    <fullName>DailyDNA</fullName>
                </value>
                <value>
                    <fullName>DASHBOARD - OEM</fullName>
                </value>
                <value>
                    <fullName>DataTel</fullName>
                </value>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>Digital Vantage Point</fullName>
                </value>
                <value>
                    <fullName>Discovery Productions</fullName>
                </value>
                <value>
                    <fullName>Disus</fullName>
                </value>
                <value>
                    <fullName>Dynamics AX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Timing__c</fullName>
        <label>Project Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
                <value>
                    <fullName>Phased Approach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type_Instructions__c</fullName>
        <label>Project Type Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Types__c</fullName>
        <label>Project Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audit Support</fullName>
                </value>
                <value>
                    <fullName>Data Transformation Services</fullName>
                </value>
                <value>
                    <fullName>Enhanced Backfiling</fullName>
                </value>
                <value>
                    <fullName>Integration Services</fullName>
                </value>
                <value>
                    <fullName>Nexus Analysis</fullName>
                </value>
                <value>
                    <fullName>Past Tax Liability Determination</fullName>
                </value>
                <value>
                    <fullName>Registration Name or Address Change</fullName>
                </value>
                <value>
                    <fullName>Tax Registration/De-Registration</fullName>
                </value>
                <value>
                    <fullName>Tax Research</fullName>
                </value>
                <value>
                    <fullName>Voluntary Compliance (VDA, Amnesty, etc)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Pricing__c</fullName>
        <label>Proposed Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Per Jurisdiction Fee</fullName>
                </value>
                <value>
                    <fullName>Hourly Fee</fullName>
                </value>
                <value>
                    <fullName>Contingency Fee (%)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Check_Mail_Date__c</fullName>
        <label>Refund Check Mail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Due__c</fullName>
        <label>Refund Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Processed_Checked_By__c</fullName>
        <label>Refund Processed Checked By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Processed_Date_Checked__c</fullName>
        <label>Refund Processed Date Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refund_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60 Days of Order</fullName>
                </value>
                <value>
                    <fullName>Special Contract Terms</fullName>
                </value>
                <value>
                    <fullName>Customer Concession</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Required_Checked_By__c</fullName>
        <label>Refund Required Checked By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Required_Date_Checked__c</fullName>
        <label>Refund Required Date Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refund_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account record that a SmartTask is associated with.</description>
        <inlineHelpText>The Account record that a SmartTask is associated with.</inlineHelpText>
        <label>Related To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedToCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SmartTasks (Related To Case)</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedToOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Oppty</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Invoice_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Be sure to populate the first related invoice, then use this field if there are subsequent invoices related to this SmartTask.</inlineHelpText>
        <label>Related Invoice (2)</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>SmartTasks (Related Invoice (2))</relationshipLabel>
        <relationshipName>SmartTasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Invoice_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Invoice (3)</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>SmartTasks (Related Invoice (3))</relationshipLabel>
        <relationshipName>SmartTasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filtered invoice lookup list of related account invoices</description>
        <label>Related to Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RelatedToAccount__c</field>
                <operation>equals</operation>
                <valueField>Zuora__ZInvoice__c.Zuora__Account__c</valueField>
            </filterItems>
            <infoMessage>Select the related Invoice requiring adjustment.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>SmartTasks</relationshipLabel>
        <relationshipName>SmartTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Partner (Case 14511627)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SmartTasks (Related to Partner)</relationshipLabel>
        <relationshipName>SmartTasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalDate__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReplacedBy__c</fullName>
        <label>Replaced by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nothing</fullName>
                </value>
                <value>
                    <fullName>Internal Staff</fullName>
                </value>
                <value>
                    <fullName>Another Avalara Product</fullName>
                </value>
                <value>
                    <fullName>CPA Firm/Accountant</fullName>
                </value>
                <value>
                    <fullName>Competitor - Vertex</fullName>
                </value>
                <value>
                    <fullName>Competitor - Sabrix</fullName>
                </value>
                <value>
                    <fullName>Competitor - CCH</fullName>
                </value>
                <value>
                    <fullName>Competitor - ADP</fullName>
                </value>
                <value>
                    <fullName>Competitor - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Action requested</description>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReturnsCompleteDateTime__c</fullName>
        <label>ReturnsCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Returns_Assigned__c</fullName>
        <label>Returns Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Returns_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returns Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returns_Instructions_Sent__c</fullName>
        <label>Returns Instructions Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Returns_Stamp__c</fullName>
        <label>Returns Stamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Review__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14496</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14496</inlineHelpText>
        <label>Root Cause Review</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing/Contract Error</fullName>
                </value>
                <value>
                    <fullName>Business Restructure</fullName>
                </value>
                <value>
                    <fullName>Cancellation Outside Policy</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>Customer Readiness</fullName>
                </value>
                <value>
                    <fullName>Customer Retention/Avoid Cancellation</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Expectations/Miscommunication</fullName>
                </value>
                <value>
                    <fullName>Implementation/Support Issues</fullName>
                </value>
                <value>
                    <fullName>Invalid Transactions</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Price/Policy Change</fullName>
                </value>
                <value>
                    <fullName>Process not Followed</fullName>
                </value>
                <value>
                    <fullName>Returns Activation or Min. Monthly</fullName>
                </value>
                <value>
                    <fullName>Services not Performed</fullName>
                </value>
                <value>
                    <fullName>SLA / Accuracy Guarantee</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Downgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMID_Zuora_Billing_Account_Number__c</fullName>
        <formula>Billing_Account__r.SMID_Zuora_Billing_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMID / Zuora Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Timing__c</fullName>
        <label>Need SOW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>1-2 Days</fullName>
                </value>
                <value>
                    <fullName>Other (see comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRRPerReturnFee__c</fullName>
        <description>Per Return Fee for Signature Ready Returns</description>
        <inlineHelpText>Per Return Fee for Signature Ready Returns</inlineHelpText>
        <label>SRR Per Return Fee</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SRSPerReturnFee__c</fullName>
        <description>Per Return Fee for Signed Returns with (POA)</description>
        <inlineHelpText>Per Return Fee for Signed Returns with (POA)</inlineHelpText>
        <label>SRS Per Return Fee</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSTCompleteDateTime__c</fullName>
        <label>SSTCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SST_Assigned__c</fullName>
        <label>SST Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SST_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SST Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SST_Instructions_Sent__c</fullName>
        <label>SST Instructions Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SST_Stamp__c</fullName>
        <label>SST Stamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Calc_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Calc Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Certs_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Certs Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Returns_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Returns Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_SST_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send SST Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <label>Last Day of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceIndustryDescription__c</fullName>
        <description>A description of the Service Industry the client is a participant in</description>
        <inlineHelpText>A description of the Service Industry the client is a participant in</inlineHelpText>
        <label>Service Industry Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SiteManagerID__c</fullName>
        <description>The SiteManager ID associated with this Account</description>
        <formula>CaseRef__r.Account.SiteManagerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The SiteManager ID associated with this Account</inlineHelpText>
        <label>SiteManager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteManager_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SiteManager Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteMgrCompleteDateTime__c</fullName>
        <label>SiteMgrCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SiteMgrStamp__c</fullName>
        <label>SiteMgrStamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteMgr_Assigned__c</fullName>
        <label>SiteMgr Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SpecialProjectEstNotes__c</fullName>
        <description>Notes related to the Special Project Tax Estimate Service</description>
        <inlineHelpText>Notes related to the Special Project Tax Estimate Service</inlineHelpText>
        <label>Add&apos;l Services / Deliverables / Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Txn_Limit__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date that Transaction Limit Cap begins</description>
        <label>Start Transaction Limit</label>
        <type>Date</type>
    </fields>
</CustomObject>